Update pattern without image

--- a/pattern.html
+++ b/pattern.html
@@ -9,6 +9,37 @@
     <link rel="stylesheet" type="text/css" href="css/pattern.css">
 </head>
 <body>
-    <div class="pattern"></div>
+    <div class="pattern">
+        <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+         <div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+    </div>
 </body>
-</html>
+</html> 
